--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/Jayreg3/CapOne#readme",
   "dependencies": {
+    "cross-fetch": "^3.0.1",
+    "ejs": "^2.6.1",
     "express": "^4.16.4"
   }
 }
